WKTR often reports an unresponsive WebProcess on Mac bots https://bugs.webkit.org/show_bug.cgi?id=95906

Reviewed by Dan Bernstein.

Attempt to work around resource contention issues by increasing the NRWT
timeout when running against WKTR, as well as WKTR's own WebProcess timeout.

* Scripts/webkitpy/layout_tests/port/base.py:
(Port.default_timeout_ms): Default timeout when using WKTR -> 80 seconds.
* WebKitTestRunner/TestController.cpp:
(WTR): LongTimeout (used when waiting for WebProcess to finish) -> 60 seconds.


Canonical link: https://commits.webkit.org/114179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128086 268f45cc-cd09-0410-ab3c-d52691b4dbfc